[gd_scene load_steps=5 format=3 uid="uid://cip3dflwrem2i"]

[ext_resource type="FontFile" uid="uid://dk4xq2byc074y" path="res://Assets/Kanit-MediumItalic.ttf" id="1_jxero"]
[ext_resource type="Script" uid="uid://c0v6hedfopmqe" path="res://Scripts/ui.gd" id="1_qdvrb"]
[ext_resource type="Texture2D" uid="uid://dk1y0awijvgfk" path="res://Assets/Images/finish-flag.png" id="3_nf4gj"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2246s"]
texture = ExtResource("3_nf4gj")

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_qdvrb")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -56.0
offset_right = 56.0
offset_bottom = 67.0
grow_horizontal = 2
size_flags_vertical = 0

[node name="TimeLabel" type="Label" parent="CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_jxero")
theme_override_font_sizes/font_size = 40
text = "00.00"
horizontal_alignment = 1

[node name="NextLevelContainer" type="CenterContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Panel" type="Panel" parent="NextLevelContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="NextLevelContainer/Panel"]
layout_mode = 2
offset_left = -63.0
offset_top = -16.0
offset_right = 63.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
text = "Play Next Level"

[node name="Panel" type="Panel" parent="."]
offset_right = 100.0
offset_bottom = 73.0
theme_override_styles/panel = SubResource("StyleBoxTexture_2246s")

[node name="WinsLabel" type="Label" parent="."]
offset_left = 100.0
offset_right = 140.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Wins:
0"
horizontal_alignment = 1

[node name="MostWinsLabel" type="Label" parent="."]
offset_left = 175.0
offset_right = 260.0
offset_bottom = 49.0
theme_override_colors/font_color = Color(0.972848, 0.160951, 3.85046e-07, 1)
text = "Most Wins:
0"
horizontal_alignment = 1

[node name="BestTimeLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 124.0
offset_right = 209.0
offset_bottom = 49.045
grow_horizontal = 2
theme_override_colors/font_color = Color(0.972848, 0.160951, 3.85046e-07, 1)
text = "Best time:
0.00"
horizontal_alignment = 1

[connection signal="pressed" from="NextLevelContainer/Panel/Button" to="." method="_on_next_level_button_pressed"]
